Fix disappearing hamburger on iOS

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -253,7 +253,6 @@ main
     align-items: center
     padding: 0 1rem
     justify-content: space-between
-    overflow-x: hidden
     &__logo
         color: white
         font-weight: 300
